--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,15 @@
 
     <body id="body">
         <div class="header">
-            <h1>Willkommen zum Spiel!</h1>
+            <h1 tabindex="0">Willkommen zum Spiel!</h1>
         </div>
         <div class="row">
-                <div class="column side">
-                </div>
+                <div class="column side"></div>
             
 
             <div class="column middle">
                 <div id="visual-settings" class="settings-container visible"> 
-                    <h2>Wo möchtest du hin?</h2>
+                    <h2 tabindex="0">Wo möchtest du hin?</h2>
                     <br>
                     <div class="row">
                         <a href="game.html" class="button">Zum Spiel</a>
