--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 
     <body>
         <div class="header">
-            <img tabindex="1" src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('index.html', '_self');"/>
+            <img src="./images/back.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/>
             <h1>Einstellungen</h1>
         </div>
 
