--- a/gamerules.html
+++ b/gamerules.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
@@ -9,21 +9,20 @@
 
     <body id="body">
         <div class="header">
-            <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('index.html', '_self');"/>
-            <h1>Gamerules - How does this game work?</h1>
+            <img src="./images/back.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/>
+            <h1 tabindex="0">Wie funktioniert das Spiel?</h1>
         </div>
 
         <div class="row">
-            <div class="column side">
-            </div>
+            <div class="column side"></div>
 
             <div class="column middle">
                 <div id="visual-settings" class="settings-container visible"> 
-                    <h2>Gamerules</h2>
+                    <h2 tabindex="0">Spielregeln</h2>
                     <br>
                     <div class="row">
-                        <p class="text">Text, Text, Text, Text</p>
-                        <p class="text">[...]</p>
+                        <p class="text" tabindex="0">Text, Text, Text, Text</p>
+                        <p class="text" tabindex="0">[...]</p>
                     </div>
                 </div>
             </div>
