--- a/tutorial.html
+++ b/tutorial.html
@@ -8,15 +8,19 @@
     </head>
 
     <body id="body">
-        
-        <!-- <img src="./images/back.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/> -->
+         <!-- Steuerungselemente -->
+         <img src="./images/back_black.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/>
+         <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/>
+         <img src="./images/settings.png" tabindex="0" alt="settings" id="settings" onclick="navigateToSettings()" onkeydown="handleKeyDown_Settings(event)"/>
+ 
+        <!-- Canvas -->
+        <canvas id="canvas"></canvas>
 
         <!-- JS-Dateien -->
         <script src="settingUpdate.js"></script>
+        <script src="tutorial.js"></script>
 
         <!-- IMG-Dateien -->
-        <img src="./images/settings.png" tabindex="0" alt="settings" id="settings" onclick="navigateToSettings()" onkeydown="handleKeyDown_Settings(event)"/>
-        <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/>
         <!-- <img src="./images/warrior.png" alt="warrior" id="warrior"/>
         <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
         <img src="./images/zombie.png" alt="zombie" id="zombie"/>
