Tutorial-Grundlagen_Overlay

--- a/tutorial.html
+++ b/tutorial.html
@@ -5,6 +5,7 @@
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Vortexx</title>
         <link rel="stylesheet" href="game.css">
+        <link rel="stylesheet" href="tutorial.css">
     </head>
 
     <body id="body">
@@ -15,6 +16,8 @@
  
         <!-- Canvas -->
         <canvas id="canvas"></canvas>
+
+        <button tabindex="0" type="button" id="buttonFurther">Weiter</button>
 
         <!-- JS-Dateien -->
         <script src="settingUpdate.js"></script>
