--- a/tutorial.html
+++ b/tutorial.html
@@ -10,6 +10,8 @@
 
     <body id="body">
          <!-- Steuerungselemente -->
+        <button tabindex="0" type="button" id="buttonAudio">Play Audio</button>
+        <button tabindex="0" type="button" id="buttonFurther">Weiter</button>
          <img src="./images/back_black.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/>
          <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/>
          <img src="./images/settings.png" tabindex="0" alt="settings" id="settings" onclick="navigateToSettings()" onkeydown="handleKeyDown_Settings(event)"/>
@@ -17,20 +19,43 @@
         <!-- Canvas -->
         <canvas id="canvas"></canvas>
 
-        <button tabindex="0" type="button" id="buttonFurther">Weiter</button>
+        <!-- Timer -->
+        <p id="timer"></p>
+
+        <!-- Audio -->
+        <audio loop id="backgroundMusic"> 
+            <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> 
+            Dein Browser unterstützt die Audiodatei leider nicht.
+        </audio>
+        <audio id="punchWarrior"> <source src="./audio/soundFiles/warrior/punchWarrior.mp3" type="audio/mpeg"> </audio>
+        <audio id="warriorHit"> <source src="./audio/soundFiles/warrior/warriorHit.mp3" type="audio/mpeg"> </audio>
+        <audio id="bossShot"> <source src="./audio/soundFiles/enemies/bossShot.mp3" type="audio/mpeg"> </audio>
+        <audio id="bossAppearance"> <source src="./audio/soundFiles/enemies/boss_appearance.mp3" type="audio/mpeg"> </audio>
+        <audio id="bossCountdown"> <source src="./audio/soundFiles/enemies/boss_countdown.mp3" type="audio/mpeg"> </audio>
+        <audio id="enemyHit"> <source src="./audio/soundFiles/enemies/enemyHit.mp3" type="audio/mpeg"> </audio>
+        <audio id="enemyDeath"> <source src="./audio/soundFiles/enemies/enemyDeath.mp3" type="audio/mpeg"> </audio>
+        <audio id="winning"> <source src="./audio/soundFiles/win.mp3" type="audio/mpeg"> </audio>
+        <audio id="losing"> <source src="./audio/soundFiles/losing.mp3" type="audio/mpeg"> </audio>
+        <audio id="border"> <source src="./audio/soundFiles/border.mp3" type="audio/mpeg"> </audio>
 
         <!-- JS-Dateien -->
         <script src="settingUpdate.js"></script>
+        <script src="warrior.js"></script>
+        <script src="enemy.js"></script>
+        <script src="zombie.js"></script>
+        <script src="boss.js"></script>
         <script src="tutorial.js"></script>
+        <script src="gui.js"></script>
+        <script src="audioButton.js"></script>
 
         <!-- IMG-Dateien -->
-        <!-- <img src="./images/warrior.png" alt="warrior" id="warrior"/>
+        <img src="./images/warrior.png" alt="warrior" id="warrior"/>
         <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
         <img src="./images/zombie.png" alt="zombie" id="zombie"/>
         <img src="./images/boss.png" alt="boss" id="boss"/>
         <img src="./images/heart.png" alt="heart" id="heart"/>
         <img src="./images/bossShot.png" alt="heartDamage" id="heartDamage"/>
         <img src="./images/settings.png" tabindex="0" alt="settings" id="settings" onclick="navigateToSettings()" onkeydown="handleKeyDown_Settings(event)"/>
-        <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/> -->
+        <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/>
     </body>
 </html>
