erste_Sounds_für_Tutorial einfügen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h2 tabindex="0">Wo möchtest du hin?</h2>
                     <br>
                     <div class="row">
-                        <a href="game.html" class="button">Zum Spiel</a>
+                        <a href="game.html" class="button" id="gameButton">Zum Spiel</a>
                         <a href="tutorial.html" class="button">Zum Tutorial</a>
                         <a href="settings.html" class="button">Zu den Einstellungen</a>
                     </div>
