--- a/tutorial.html
+++ b/tutorial.html
@@ -38,6 +38,10 @@
         <audio id="losing"> <source src="./audio/soundFiles/losing.mp3" type="audio/mpeg"> </audio>
         <audio id="border"> <source src="./audio/soundFiles/border.mp3" type="audio/mpeg"> </audio>
 
+        <!-- SoundFiles speziell für das Tutorial -->
+        <audio id="tutorialWelcome"> <source src="./audio/tutorial/Tutorial_Willkommen.mp3" type="audio/mpeg"> </audio>
+        <audio id="tutorialEnd"> <source src="./audio/tutorial/Tutorial_Beendet.mp3" type="audio/mpeg"> </audio>
+
         <!-- JS-Dateien -->
         <script src="settingUpdate.js"></script>
         <script src="warrior.js"></script>
