Tutorial_Sounds_GUI_clear

--- a/tutorial.html
+++ b/tutorial.html
@@ -10,7 +10,7 @@
 
     <body id="body">
          <!-- Steuerungselemente -->
-        <button tabindex="0" type="button" id="buttonAudio">Play Audio</button>
+        <button tabindex="0" type="button" id="buttonAudio" onclick="playSound('tutorialWelcome')">Play Audio</button>
         <button tabindex="0" type="button" id="buttonFurther">Weiter</button>
          <img src="./images/back_black.png" tabindex="0" alt="Zurück zum Hauptmenü" id="backToGame" onclick="navigateToHome()" onkeydown="handleKeyDown_Home(event)"/>
          <img src="./images/gamerules.png" tabindex="0" alt="gamerules" id="gamerules" onclick="navigateToGamerules()" onkeydown="handleKeyDown_Gamerules(event)"/>
