--- a/test.html
+++ b/test.html
@@ -6,6 +6,15 @@
     <title>3D Audio Spiel</title>
 </head>
 <body>
+    <label for="x-coord">X-Koordinate:</label>
+    <input type="number" id="x-coord" value="0">
+    <br>
+    <label for="y-coord">Y-Koordinate:</label>
+    <input type="number" id="y-coord" value="0">
+    <br>
+    <label for="z-coord">Z-Koordinate:</label>
+    <input type="number" id="z-coord" value="0">
+    <br>
     <button id="play-sound">Sound Abspielen</button>
 
     <script>
@@ -58,20 +67,23 @@
             source.start();
         }
 
-        // Beispielhafte Event-Listener für den Button
+        // Event-Listener für den Button
         document.getElementById('play-sound').addEventListener('click', () => {
-            // Beispiel: Spiele den Sound von der Position (5, 0, -5)
-            playSoundAtPosition("./audio/music/backgroundMusic.mp3", 5, 0, -5);
+            const x = parseFloat(document.getElementById('x-coord').value);
+            const y = parseFloat(document.getElementById('y-coord').value);
+            const z = parseFloat(document.getElementById('z-coord').value);
+
+            playSoundAtPosition("./audio/music/backgroundMusic.mp3", x, y, z);
         });
 
         // Funktion, die aufgerufen wird, wenn ein Gegner auftaucht
-        // function enemyAppears(x, y, z) {
-        //     playSoundAtPosition('./audio/music/backgroundMusic.mp3', x, y, z);
-        // }
+        function enemyAppears(x, y, z) {
+            playSoundAtPosition('./audio/music/backgroundMusic.mp3', x, y, z);
+        }
 
         // Beispielaufruf der Funktion (x, y, z Position des Gegners)
         // Diese Funktion sollte aufgerufen werden, wenn ein Gegner im Spiel erscheint
-        // enemyAppears(10, 0, -10);
+        enemyAppears(10, 0, -10);
     </script>
 </body>
 </html>
