--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
         <audio id="bossCountdown"> <source src="./audio/soundFiles/enemies/boss_countdown.mp3" type="audio/mpeg"> </audio>
         <audio id="enemyHit"> <source src="./audio/soundFiles/enemies/enemyHit.mp3" type="audio/mpeg"> </audio>
         <audio id="enemyDeath"> <source src="./audio/soundFiles/enemies/enemyDeath.mp3" type="audio/mpeg"> </audio>
-        <audio id="enemyWalking" crossorigin="anonymous"> <source src="./audio/soundFiles/enemies/zombieWalking.mp3" type="audio/mpeg"> </audio>
+        <audio id="enemyWalking"> <source src="./audio/soundFiles/enemies/zombieWalking.mp3" type="audio/mpeg"> </audio>
         <audio id="winning"> <source src="./audio/soundFiles/win.mp3" type="audio/mpeg"> </audio>
         <audio id="losing"> <source src="./audio/soundFiles/losing.mp3" type="audio/mpeg"> </audio>
         <audio id="border"> <source src="./audio/soundFiles/border.mp3" type="audio/mpeg"> </audio>
@@ -45,6 +45,7 @@
         <script src="game.js"></script>
         <script src="gui.js"></script>
         <script src="settingUpdate.js"></script>
+        <script src="audio3D.js"></script>
         <script src="audioButton.js"></script>
 
         <!-- IMG-Dateien -->
