Sound_Basic_Funktionen

--- a/game.html
+++ b/game.html
@@ -28,6 +28,7 @@
         <audio id="punchWarrior"> <source src="./audio/soundFiles/warrior/punchWarrior.mp3" type="audio/mpeg"> </audio>
         <audio id="warriorHit"> <source src="./audio/soundFiles/warrior/warriorHit.mp3" type="audio/mpeg"> </audio>
         <audio id="bossShot"> <source src="./audio/soundFiles/enemies/bossShot.mp3" type="audio/mpeg"> </audio>
+        <audio id="bossShotPos"> <source src="./audio/soundFiles/enemies/bossShotPos.mp3" type="audio/mpeg"> </audio>
         <audio id="bossAppearance"> <source src="./audio/soundFiles/enemies/boss_appearance.mp3" type="audio/mpeg"> </audio>
         <audio id="bossCountdown"> <source src="./audio/soundFiles/enemies/boss_countdown.mp3" type="audio/mpeg"> </audio>
         <audio id="enemyHit"> <source src="./audio/soundFiles/enemies/enemyHit.mp3" type="audio/mpeg"> </audio>
