Sound_aus_Richtung

--- a/game.html
+++ b/game.html
@@ -17,6 +17,9 @@
         <!-- Canvas -->
         <canvas id="canvas"></canvas>
 
+        <!-- Circle für Warrior -->
+        <div id="closenessCircle"></div>
+
         <!-- Timer -->
         <p id="timer"></p>
 
